import groovy.json.JsonSlurper
import io.github.cdimascio.dotenv.Dotenv
import org.apache.http.client.utils.URIBuilder

buildscript {
    dependencies {
        classpath "io.github.cdimascio:dotenv-java:${dotenvVersion}"
        classpath "org.apache.httpcomponents:httpclient:${apacheHttpclientVersion}"
    }
}

plugins {
    id 'java'
    id 'org.springframework.boot' version "${springBootVersion}"
    id 'io.spring.dependency-management' version "${dependencyManagementVersion}"
}

group = 'com.ed'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
    avroTools
}

repositories {
    mavenCentral()
    maven {
        url = uri("https://packages.confluent.io/maven")
    }
}

tasks.named("compileJava") {
    dependsOn("generateAvroJava")
}

tasks.named("build") {
    dependsOn("generateAvroJava")
}

dependencies {
    // web
    implementation "org.springframework.boot:spring-boot-starter-web:${springBootVersion}"
    implementation "org.springframework.boot:spring-boot-starter-thymeleaf:${springBootVersion}"
    implementation "org.springframework.boot:spring-boot-starter-validation:${springBootVersion}"

    // batch
    implementation "org.springframework.boot:spring-boot-starter-batch:${springBootVersion}"

    // db
    implementation "org.springframework.boot:spring-boot-starter-data-jpa:${springBootVersion}"
    runtimeOnly "com.mysql:mysql-connector-j:${mysqlConnectorVersion}"

    // QueryDsl
    implementation "com.querydsl:querydsl-jpa:${querydslVersion}:jakarta"
    annotationProcessor "com.querydsl:querydsl-apt:${querydslVersion}:jakarta"
    annotationProcessor 'jakarta.annotation:jakarta.annotation-api'
    annotationProcessor 'jakarta.persistence:jakarta.persistence-api'

    // kafka
    implementation "org.springframework.kafka:spring-kafka:${springKafkaVersion}"
    testImplementation "org.springframework.kafka:spring-kafka-test:${springKafkaVersion}"
    avroTools "org.apache.avro:avro-tools:${avroToolsVersion}"
    implementation "io.confluent:kafka-avro-serializer:${kafkaAvroSerializerVersion}"

    // eureka
    implementation "org.springframework.cloud:spring-cloud-starter-netflix-eureka-client:${springCloudVersion}"
    implementation "org.springframework.cloud:spring-cloud-starter-openfeign:${springCloudVersion}"

    // lombok
    compileOnly "org.projectlombok:lombok:${lombokVersion}"
    annotationProcessor "org.projectlombok:lombok:${lombokVersion}"

    // test
    testImplementation "org.springframework.boot:spring-boot-starter-test:${springBootVersion}"
    testRuntimeOnly "org.junit.platform:junit-platform-launcher:${junitPlatformVersion}"
}

tasks.named('test') {
    useJUnitPlatform()
    jvmArgs '-XX:+EnableDynamicAgentLoading'
}

sourceSets {
    main {
        java {
            srcDir 'build/generated-src'
        }
    }
}

def loadEnv() {
    return Dotenv.configure()
            .directory(project.rootDir.absolutePath)
            .ignoreIfMissing()
            .load()
}

tasks.register("downloadAvroSchema") {
    group = "build"
    description = "Downloads AVSC files from Confluent Schema Registry with wildcard filtering"

    def dotenv = loadEnv()
    def schemaRegistryUrls = [
            dev  : dotenv.get("DEV_SCHEMA_REGISTRY_URL"),
            prod : dotenv.get("PROD_SCHEMA_REGISTRY_URL")
    ]
    def activeProfile = System.getProperty("spring.profiles.active") ?: "dev"

    def schemaRegistryUrl = schemaRegistryUrls[activeProfile]
    def subjectPattern = ~/^order_payment_.*-value$/
    def outputDir = file("src/main/avro")

    inputs.property("schemaRegistryUrl", schemaRegistryUrl)
    inputs.property("subjectPattern", subjectPattern.toString())
    outputs.dir(outputDir)

    doLast {
        outputDir.mkdirs()

        def subjectsUrl = new URIBuilder(schemaRegistryUrl)
                .setPath("/subjects")
                .build()
                .toURL()

        def allSubjects = subjectsUrl.text
        def subjectList = new JsonSlurper().parseText(allSubjects)

        def matchedSubjects = subjectList.findAll { it ==~ subjectPattern }

        matchedSubjects.each { subject ->
            def schemaUrl = new URIBuilder(schemaRegistryUrl)
                    .setPath("/subjects/${subject}/versions/latest")
                    .build()
                    .toURL()

            def response = schemaUrl.text
            def schema = new JsonSlurper().parseText(response).schema

            def fileName = subject.replaceAll('-value$', "") + ".avsc"
            def avscFile = new File(outputDir, fileName)
            avscFile.text = schema
        }
    }
}

tasks.register("generateAvroJava", JavaExec) {
    group = "build"
    description = "Compiles Avro schemas into Java classes"
    mainClass.set("org.apache.avro.tool.Main")
    classpath = configurations.avroTools

    def avroFiles = fileTree("src/main/avro").include("*.avsc")
    args = ["compile", "-string", "schema"] + avroFiles.collect { it } + ["build/generated-src"]
    dependsOn("downloadAvroSchema")
}

ext {
    set('springCloudVersion', "2024.0.0")
}

dependencyManagement {
    imports {
        mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
    }
}